--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -31,9 +31,11 @@ jobs:
 
       # Step 5: Commit and push changes
       - name: Commit and Push changes
-        run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
-          git add README.md
-          git commit -m "Auto-update README" || exit 0
-          git push
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  run: |
+    git config --global user.name 'GitHub Actions'
+    git config --global user.email 'github-actions@github.com'
+    git add README.md
+    git commit -m "Auto-update README" || echo "No changes to commit"
+    git push origin main
