--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -3,7 +3,7 @@ name: Auto Update README
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+    - cron: "0 11 * * *"  # Runs daily at 11 AM UTC (3 AM in LA)
   workflow_dispatch:  # Allows manual execution
 
 jobs:
@@ -31,11 +31,11 @@ jobs:
 
       # Step 5: Commit and push changes
       - name: Commit and Push changes
-  env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  run: |
-    git config --global user.name 'GitHub Actions'
-    git config --global user.email 'github-actions@github.com'
-    git add README.md
-    git commit -m "Auto-update README" || echo "No changes to commit"
-    git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'github-actions@github.com'
+          git add README.md
+          git commit -m "Auto-update README" || echo "No changes to commit"
+          git push origin main
