--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -1,41 +1,34 @@
-# GitHub Actions Workflow for updating README
 name: Auto Update README
 
 on:
   schedule:
-    - cron: "0 11 * * *"  # Runs daily at 11 AM UTC (3 AM in LA)
+    - cron: "0 11 * * *"  # Runs daily at 11 AM UTC
   workflow_dispatch:  # Allows manual execution
 
 jobs:
   update-readme:
-    runs-on: ubuntu-latest  # Uses latest Ubuntu runner
-
+    runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout the repository code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
-      # Step 3: Install dependencies
       - name: Install dependencies
         run: pip install requests pandas
 
-      # Step 4: Run update script
       - name: Run update script
         run: python update_readme.py
 
-      # Step 5: Commit and push changes
-- name: Commit and Push changes
-  env:
-    GITHUB_TOKEN: ${{ secrets.PAT }}
-  run: |
-    git config --global user.name 'GitHub Actions'
-    git config --global user.email 'github-actions@github.com'
-    git add README.md
-    git commit -m "Auto-update README" || echo "No changes to commit"
-    git push https://x-access-token:${{ secrets.FINE_GRAINED_PAT }}@github.com/evgeniimatveev/evgeniimatveev.git main
+      - name: Commit and Push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.FINE_GRAINED_PAT }}
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'github-actions@github.com'
+          git add README.md
+          git commit -m "Auto-update README" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.FINE_GRAINED_PAT }}@github.com/evgeniimatveev/evgeniimatveev.git main
