--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,8 +2,9 @@ name: Auto Update README
 
 on:
   schedule:
-    - cron: "0 11 * * *"  #11:00 UTC (3:00 AM  LA)
+    - cron: "0 11 * * *" 
   workflow_dispatch:  
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest  
@@ -23,18 +24,12 @@ jobs:
       - name: Run update script
         run: python update_readme.py
 
-      - name: Debug GitHub Token (Optional)
+      - name: Push changes using CLASSIC_PAT
+        env:
+          GITHUB_TOKEN: ${{ secrets.CLASSIC_PAT }}
         run: |
-          echo "Checking authentication..."
-          git remote -v
-          echo "GitHub token: ${{ secrets.GITHUB_TOKEN }}" | sed 's/./& /g'
-
-      - name: Push changes using GITHUB_TOKEN
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
           git add README.md
           git commit -m "Auto-update README" || echo "No changes to commit"
-          git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git push https://x-access-token:${{ secrets.CLASSIC_PAT }}@github.com/evgeniimatveev/evgeniimatveev.git main
