--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,7 +2,7 @@ name: Auto Update README
 
 on:
   schedule:
-    - cron: "0 11 * * *" 
+    - cron: "0 */6 * * *" 
   workflow_dispatch:
 
 jobs:
@@ -24,19 +24,12 @@ jobs:
       - name: Run update script
         run: python update_readme.py
 
-      - name: Debug GitHub Token (Optional)
-        run: |
-          echo "Checking authentication..."
-          git remote -v
-          echo "GitHub token is set."
-
-      - name: Push changes using CLASSIC_PAT
+      - name: Push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.CLASSIC_PAT }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add README.md
           git commit -m "Auto-update README" || echo "No changes to commit"
-          git remote set-url origin https://x-access-token:${{ secrets.CLASSIC_PAT }}@github.com/evgeniimatveev/evgeniimatveev.git
-          git push origin main
-        env:
-          CLASSIC_PAT: ${{ secrets.CLASSIC_PAT }}
+          git push https://x-access-token:${{ secrets.CLASSIC_PAT }}@github.com/evgeniimatveev/evgeniimatveev.git main
