--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,8 +2,8 @@ name: Auto Update README
 
 on:
   schedule:
-    - cron: "0 0,6,12,18 * * *" 
-  workflow_dispatch:  
+    - cron: "0 */3 * * *"  
+  workflow_dispatch:
 
 jobs:
   update-readme:
