--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -1,40 +1,40 @@
-name: Auto Update README
+name: Auto Update README  # GitHub Actions Workflow name
 
 on:
   schedule:
-    - cron: "0 */3 * * *"  
-  workflow_dispatch:
+    - cron: "0 */3 * * *"  # Runs every 3 hours
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   update-readme:
-    runs-on: ubuntu-latest  
+    runs-on: ubuntu-latest  # Runs on the latest Ubuntu version
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repository  # Clone the repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: false  
+          persist-credentials: false  # Disable automatic authentication
 
-      - name: Set up Python
+      - name: Set up Python  # Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: "3.9"  # Use Python 3.9
 
-      - name: Install dependencies
+      - name: Install dependencies  # Install required dependencies
         run: pip install requests pandas
 
-      - name: Run update script
+      - name: Run update script  # Execute the script to update README
         run: python update_readme.py
 
-      - name: Configure Git
+      - name: Configure Git  # Set up Git user details for commits
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
 
-      - name: Commit and Push changes
+      - name: Commit and Push changes  # Commit and push updates to the repository
         env:
-          GITHUB_TOKEN: ${{ secrets.CLASSIC_PAT }}
+          GITHUB_TOKEN: ${{ secrets.CLASSIC_PAT }}  # Use the stored token
         run: |
-          git add README.md
-          git commit -m "Auto-update README" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.CLASSIC_PAT }}@github.com/${{ github.repository }}.git HEAD:main
+          git add README.md  # Stage the README file for commit
+          git commit -m "Auto-update README" || echo "No changes to commit"  # Commit changes if any
+          git push https://x-access-token:${{ secrets.CLASSIC_PAT }}@github.com/${{ github.repository }}.git HEAD:main  # Push the commit to the main branch
