--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,7 +2,7 @@ name: Auto Update README  # GitHub Actions Workflow name
 
 on:
   schedule:
-    - cron: "0 */3 * * *"  # Runs every 3 hours
+    - cron: "0 */1 * * *"  # Runs every hour
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
